--- a/config.yaml
+++ b/config.yaml
@@ -108,21 +108,18 @@ forward_tacotron:
   model:
     embed_dims: 256             # embedding dimension for the graphemes/phoneme inputs
     series_embed_dims: 64       # grapheme embedding dimension for series predictor
-    durpred_conv_dims: 256
     durpred_rnn_dims: 64
-    durpred_dropout: 0.5
+    durpred_dropout: 0
 
-    pitch_conv_dims: 256
     pitch_rnn_dims: 128
-    pitch_dropout: 0.5
+    pitch_dropout: 0.
     pitch_emb_dims: 32           # embedding dimension of pitch, set to 0 if you don't want pitch conditioning
-    pitch_proj_dropout: 0.
+    pitch_proj_dropout: 0
 
-    energy_conv_dims: 256
     energy_rnn_dims: 64
-    energy_dropout: 0.5
+    energy_dropout: 0
     energy_emb_dims: 32           # embedding dimension of energy, set to 0 if you don't want energy conditioning
-    energy_proj_dropout: 0.
+    energy_proj_dropout: 0
 
     prenet_conv_dims: 512
     prenet_lstm_dims: 512
@@ -144,7 +141,7 @@ forward_tacotron:
     max_mel_len: 1250              # if you have a couple of extremely long spectrograms you might want to use this
     clip_grad_norm: 1.0            # clips the gradient norm to prevent explosion - set to None if not needed
     checkpoint_every: 10_000        # checkpoints the model every X steps
-    plot_every: 1000
+    plot_every: 1
 
     filter_attention: True               # whether to filter data with bad attention scores
     min_attention_sharpness: 0.5         # filter data with bad attention sharpness score, if 0 then no filter
