--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 
 voc_model_id: 'ljspeech_voc'
-tts_model_id: 'ljspeech_taco2_new_tts'
+tts_model_id: 'ljspeech_taco2_2_tts'
 
 data_path: 'data/' # output data path
 
@@ -124,7 +124,10 @@ forward_tacotron:
     energy_dropout: 0.5
     energy_emb_dims: 32           # embedding dimension of energy, set to 0 if you don't want energy conditioning
     energy_proj_dropout: 0
-
+    prenet_kernel_size: 1
+    prenet_conv_layers: 2
+    prenet_conv_dims: 256
+    prenet_dropout: 0.3
     prenet_gru_dims: 256
     main_conv_dims: 512
     main_gru_dims: 512
