--- a/config.yaml
+++ b/config.yaml
@@ -106,12 +106,16 @@ tacotron:
 forward_tacotron:
 
   model:
-    embed_dims: 256             # embedding dimension for the graphemes/phoneme inputs
+
     series_embed_dims: 64       # grapheme embedding dimension for series predictor
+    series_conv_layers: 3
+    series_kernel_size: 5
 
     durpred_conv_dims: 256
     durpred_dropout: 0.5
     durpred_rnn_dims: 64
+
+    embed_dims: 256             # embedding dimension for the graphemes/phoneme inputs
 
     pitch_conv_dims: 256
     pitch_rnn_dims: 128
@@ -124,16 +128,24 @@ forward_tacotron:
     energy_dropout: 0.5
     energy_emb_dims: 32           # embedding dimension of energy, set to 0 if you don't want energy conditioning
     energy_proj_dropout: 0
+
     prenet_kernel_size: 1
     prenet_conv_layers: 2
     prenet_conv_dims: 256
     prenet_dropout: 0.3
     prenet_gru_dims: 256
+
+    main_kernel_size: 5
+    main_conv_layers: 3
     main_conv_dims: 512
+    main_dropout: 0.
     main_gru_dims: 512
+
+    postnet_kernel_size: 5
+    postnet_conv_layers: 3
     postnet_conv_dims: 256
+    postnet_dropout: 0.
     postnet_gru_dims: 256
-    dropout: 0.1
 
   training:
     schedule:
