--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 
 voc_model_id: 'ljspeech_voc'
-tts_model_id: 'asvoice2_prenet_tts'
+tts_model_id: 'asvoice2_prenet_noenergy_tts'
 
 data_path: 'data/' # output data path
 
@@ -123,7 +123,7 @@ forward_tacotron:
     energy_conv_dims: 256
     energy_rnn_dims: 64
     energy_dropout: 0.5
-    energy_emb_dims: 32           # embedding dimension of energy, set to 0 if you don't want energy conditioning
+    energy_emb_dims: 0           # embedding dimension of energy, set to 0 if you don't want energy conditioning
     energy_proj_dropout: 0.
 
     prenet_fc1: 256
@@ -142,8 +142,8 @@ forward_tacotron:
     dur_loss_factor: 0.1
     pitch_loss_factor: 0.1
     energy_loss_factor: 0.1
-    pitch_zoneout: 0.3
-    energy_zoneout: 0.3
+    pitch_zoneout: 0.
+    energy_zoneout: 0.
 
     max_mel_len: 1250              # if you have a couple of extremely long spectrograms you might want to use this
     clip_grad_norm: 1.0            # clips the gradient norm to prevent explosion - set to None if not needed
