--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 
 voc_model_id: 'ljspeech_voc'
-tts_model_id: 'ljspeech_tts'
+tts_model_id: 'ljspeech_autoalign_tts'
 
 data_path: 'data/' # output data path
 
@@ -134,7 +134,7 @@ forward_tacotron:
 
   training:
     schedule:
-      - 1e-4,  150_000,  32   # progressive training schedule
+      - 1e-4,  150_000,  2   # progressive training schedule
       - 1e-5,  300_000,  32   # lr, step, batch_size
     dur_loss_factor: 0.1
     pitch_loss_factor: 0.1
