--- a/config.yaml
+++ b/config.yaml
@@ -36,9 +36,9 @@ preprocessing:
 
   seed: 42
   n_val: 200
-  language: 'en-us'
-  cleaner_name: 'english_cleaners'     # choices: ['english_cleaners', 'no_cleaners'], expands numbers and abbreviations.
-  use_phonemes: True                   # whether to phonemize the text
+  language: 'de'
+  cleaner_name: 'no_cleaners'     # choices: ['english_cleaners', 'no_cleaners'], expands numbers and abbreviations.
+  use_phonemes: False                   # whether to phonemize the text
   min_text_len: 2
 
   # Duration Extraction from Attention
@@ -123,7 +123,7 @@ forward_tacotron:
     energy_conv_dims: 256
     energy_rnn_dims: 64
     energy_dropout: 0.5
-    energy_emb_dims: 32           # embedding dimension of energy, set to 0 if you don't want energy conditioning
+    energy_emb_dims: 0           # embedding dimension of energy, set to 0 if you don't want energy conditioning
     energy_proj_dropout: 0.
 
     prenet_k: 16
@@ -139,8 +139,8 @@ forward_tacotron:
     dur_loss_factor: 0.1
     pitch_loss_factor: 0.1
     energy_loss_factor: 0.1
-    pitch_zoneout: 0.3
-    energy_zoneout: 0.3
+    pitch_zoneout: 0.
+    energy_zoneout: 0.
 
     max_mel_len: 1250              # if you have a couple of extremely long spectrograms you might want to use this
     clip_grad_norm: 1.0            # clips the gradient norm to prevent explosion - set to None if not needed
