Switched to bert.

--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,8 @@
 
 voc_model_id: 'ljspeech_voc'
-tts_model_id: 'asvoice2_jit_add_tts'
+tts_model_id: 'asvoice2_jit_add_bert_tts'
 
-data_path: 'data_flair/' # output data path
+data_path: 'data_bert/' # output data path
 
 dsp:
 
@@ -136,8 +136,8 @@ forward_tacotron:
 
   training:
     schedule:
-      - 1e-4,  150_000,  32   # progressive training schedule
-      - 1e-5,  300_000,  32   # lr, step, batch_size
+      - 5e-5,  150_000,  32   # progressive training schedule
+      - 2e-5,  300_000,  32   # lr, step, batch_size
     dur_loss_factor: 0.1
     pitch_loss_factor: 0.1
     energy_loss_factor: 0.1
