--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 
 voc_model_id: 'ljspeech_voc'
-tts_model_id: 'asvoice2_jit_add_fastpitch2_tts'
+tts_model_id: 'asvoice2_jit_add_fastspeech_tts'
 
 data_path: 'data/' # output data path
 
@@ -106,24 +106,11 @@ tacotron:
 forward_tacotron:
 
   model:
-    durpred_dropout: 0.1
-    durpred_d_model: 256
-    durpred_n_heads: 4
-    durpred_layers: 2
-    durpred_d_fft: 512
 
-    pitch_dropout: 0.1
-    pitch_d_model: 256
-    pitch_n_heads: 4
-    pitch_layers: 2
-    pitch_d_fft: 512
+    series_dropout: 0.5
+    series_conv_dim: 256
+
     pitch_strength: 1.0
-
-    energy_dropout: 0.1
-    energy_d_model: 256
-    energy_n_heads: 4
-    energy_layers: 2
-    energy_d_fft: 512
     energy_strength: 0.
 
     prenet_layers: 4
