--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@ voc_model_id: 'ljspeech_voc'
 tts_model_id: 'ljspeech_tts'
 data_path: 'data/'                                        # output data path
 
-tts_model: 'forward_tacotron'                             # choices: [forward_tacotron, fast_pitch]
+tts_model: 'fast_pitch'                             # choices: [forward_tacotron, fast_pitch]
 
 
 dsp:
@@ -176,7 +176,7 @@ fast_pitch:
 
     max_mel_len: 1250
     clip_grad_norm: 1.0           # clips the gradient norm to prevent explosion - set to None if not needed
-    checkpoint_every: 10_000      # checkpoints the model every x steps
+    checkpoint_every: 1      # checkpoints the model every x steps
     plot_every: 1000
 
     filter_attention: True               # whether to filter data with bad attention scores
