--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 
 voc_model_id: 'ljspeech_voc'
-tts_model_id: 'ljspeech_tts'
+tts_model_id: 'asvoice2_select_tts'
 data_path: 'data/'                                        # output data path
 
 tts_model: 'fast_pitch'                             # choices: [forward_tacotron, fast_pitch]
@@ -38,9 +38,9 @@ preprocessing:
 
   seed: 42
   n_val: 200
-  language: 'en-us'
-  cleaner_name: 'english_cleaners'   # choices: ['english_cleaners', 'no_cleaners'], expands numbers and abbreviations.
-  use_phonemes: True                 # whether to phonemize the text
+  language: 'de'
+  cleaner_name: 'no_cleaners'   # choices: ['english_cleaners', 'no_cleaners'], expands numbers and abbreviations.
+  use_phonemes: False                 # whether to phonemize the text
                                      # if set to False, you have to provide the phonemized text yourself
   min_text_len: 2
   extract_durations_with_dijkstra: True    # slower but much more robust than simply counting attention peaks
@@ -176,7 +176,7 @@ fast_pitch:
 
     max_mel_len: 1250
     clip_grad_norm: 1.0           # clips the gradient norm to prevent explosion - set to None if not needed
-    checkpoint_every: 1      # checkpoints the model every x steps
+    checkpoint_every: 10000      # checkpoints the model every x steps
     plot_every: 1000
 
     filter_attention: True               # whether to filter data with bad attention scores
