--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,9 @@
 
 voc_model_id: 'ljspeech_voc'
-tts_model_id: 'ljspeech_tts'
+tts_model_id: 'asvoice2_bert_tts'
 data_path: 'data/'                                        # output data path
 
-tts_model: 'forward_tacotron'                             # choices: [forward_tacotron, fast_pitch]
+tts_model: 'fast_pitch'                             # choices: [forward_tacotron, fast_pitch]
 
 
 dsp:
@@ -38,9 +38,9 @@ preprocessing:
 
   seed: 42
   n_val: 200
-  language: 'en-us'
-  cleaner_name: 'english_cleaners'   # choices: ['english_cleaners', 'no_cleaners'], expands numbers and abbreviations.
-  use_phonemes: True                 # whether to phonemize the text
+  language: 'de'
+  cleaner_name: 'no_cleaners'   # choices: ['english_cleaners', 'no_cleaners'], expands numbers and abbreviations.
+  use_phonemes: False                 # whether to phonemize the text
                                      # if set to False, you have to provide the phonemized text yourself
   min_text_len: 2
   extract_durations_with_dijkstra: True    # slower but much more robust than simply counting attention peaks
@@ -165,7 +165,7 @@ fast_pitch:
 
   training:
     schedule:
-      - 1e-5,  5_000,  32         # progressive training schedule
+      - 1e-5,  5_000,  2         # progressive training schedule
       - 5e-5,  100_000,  32       # lr, step, batch_size
       - 2e-5,  300_000,  32
     dur_loss_factor: 0.1
@@ -177,7 +177,7 @@ fast_pitch:
     max_mel_len: 1250
     clip_grad_norm: 1.0           # clips the gradient norm to prevent explosion - set to None if not needed
     checkpoint_every: 10_000      # checkpoints the model every x steps
-    plot_every: 1000
+    plot_every: 2
 
     filter_attention: True               # whether to filter data with bad attention scores
     min_attention_sharpness: 0.5         # filter data with bad attention sharpness score, if 0 then no filter
