--- a/config.yaml
+++ b/config.yaml
@@ -91,7 +91,7 @@ forward_tacotron:
     energy_conv_dims: 256
     energy_rnn_dims: 64
     energy_dropout: 0.5
-    energy_strength: 1.             # set to 0 if you want no energy conditioning
+    energy_strength: 0.             # set to 0 if you want no energy conditioning
 
     prenet_dims: 256
     prenet_k: 16
@@ -111,7 +111,7 @@ forward_tacotron:
       - 1e-5,  300_000,  32       # lr, step, batch_size
     dur_loss_factor: 0.1
     pitch_loss_factor: 0.1
-    energy_loss_factor: 0.1
+    energy_loss_factor: 0.
     pitch_zoneout: 0.             # zoneout may regularize conditioning on pitch
     energy_zoneout: 0.            # zoneout may regularize conditioning on energy
 
