--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 
 voc_model_id: 'ljspeech_voc'
-tts_model_id: 'ljspeech_tts'
+tts_model_id: 'bild_curr_tts'
 data_path: 'data/'                                        # output data path
 
 tts_model: 'forward_tacotron'                             # choices: [forward_tacotron, fast_pitch]
@@ -38,9 +38,9 @@ preprocessing:
 
   seed: 42
   n_val: 200
-  language: 'en-us'
-  cleaner_name: 'english_cleaners'   # choices: ['english_cleaners', 'no_cleaners'], expands numbers and abbreviations.
-  use_phonemes: True                 # whether to phonemize the text
+  language: 'de'
+  cleaner_name: 'no_cleaners'   # choices: ['english_cleaners', 'no_cleaners'], expands numbers and abbreviations.
+  use_phonemes: False                 # whether to phonemize the text
                                      # if set to False, you have to provide the phonemized text yourself
   min_text_len: 2
   extract_durations_with_dijkstra: True    # slower but much more robust than simply counting attention peaks
@@ -62,10 +62,12 @@ tacotron:
 
   training:
     schedule:
-      - 5,  1e-3,  10_000,  32      # progressive training schedule
-      - 3,   1e-4,  20_000,  16     # (r, lr, step, batch_size)
-      - 2,   1e-4,  30_000,  8
-      - 1,   1e-4,  40_000,  8
+      - 5,  1e-3,  10_000,  32, 300      # progressive training schedule
+      - 5,  1e-3,  15_000,  32, 700      # progressive training schedule
+      - 5,  1e-3,  20_000,  32, 1250      # progressive training schedule
+      - 3,   1e-4,  25_000,  16,  1250     # (r, lr, step, batch_size)
+      - 2,   1e-4,  30_000,  8, 1250
+      - 1,   1e-4,  35_000,  8, 1250
 
     max_mel_len: 1250                # if you have a couple of extremely long spectrograms you might want to use this
     clip_grad_norm: 1.0              # clips the gradient norm to prevent explosion - set to None if not needed
